tests/src/frontend/typechecking/invalid/missing_arguments.sk
fun f(_a: Int, _b: Float, _c: Int = 1): void {
  void
}

fun main(): void {
  f(1);
  void
}
